--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
     "vue": "^3.0.0-beta.14"
   },
   "devDependencies": {
-    "vite": "^0.19.0",
-    "@vue/compiler-sfc": "^3.0.0-beta.14"
+    "@fullhuman/postcss-purgecss": "^2.2.0",
+    "@vue/compiler-sfc": "^3.0.0-beta.14",
+    "eslint": "^7.0.0-rc.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-vue": "^7.0.0-alpha.5",
+    "prettier": "^2.0.5",
+    "tailwindcss": "^1.4.6",
+    "tailwindcss-fluid": "^0.2.0",
+    "vite": "^0.19.0"
   }
 }
