--- a/package.json
+++ b/package.json
@@ -6,18 +6,18 @@
         "build": "NODE_ENV=production vite build"
     },
     "dependencies": {
-        "vue": "^3.0.0-beta.14"
+        "vue": "^3.0.1"
     },
     "devDependencies": {
-        "@fullhuman/postcss-purgecss": "^2.2.0",
-        "@vue/compiler-sfc": "^3.0.0-beta.14",
-        "eslint": "^7.0.0-rc.0",
-        "eslint-config-prettier": "^6.11.0",
-        "eslint-plugin-prettier": "^3.1.3",
-        "eslint-plugin-vue": "^7.0.0-alpha.5",
-        "prettier": "^2.0.5",
-        "tailwindcss": "^1.4.6",
+        "@fullhuman/postcss-purgecss": "^2.3.0",
+        "@vue/compiler-sfc": "^3.0.1",
+        "eslint": "^7.11.0",
+        "eslint-config-prettier": "^6.13.0",
+        "eslint-plugin-prettier": "^3.1.4",
+        "eslint-plugin-vue": "^7.0.1",
+        "prettier": "^2.1.2",
+        "tailwindcss": "^1.9.4",
         "tailwindcss-fluid": "^0.2.0",
-        "vite": "^0.19.0"
+        "vite": "^0.19.3"
     }
 }
